--- a/angular-src/package.json
+++ b/angular-src/package.json
@@ -15,6 +15,7 @@
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
     "@angular/forms": "~12.2.0",
+    "@angular/http": "^7.2.16",
     "@angular/localize": "~12.2.0",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
@@ -22,9 +23,12 @@
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "bootstrap": "^5.1.2",
     "bootstrap-icons": "^1.5.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "ng-image-slider": "^2.8.0",
     "ng-starrating": "^1.0.20",
     "rxjs": "~6.6.0",
+    "rxjs-compat": "^6.6.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
