--- a/package.json
+++ b/package.json
@@ -29,9 +29,7 @@
     "mongoose": "^6.0.8",
     "morgan": "^1.10.0",
     "passport": "^0.5.0",
-    "passport-jwt": "^4.0.0",
-    "swagger-jsdoc": "^6.1.0",
-    "swagger-ui-express": "^4.1.6"
+    "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
